--- a/webGL2/style.css
+++ b/webGL2/style.css
@@ -17,8 +17,8 @@ width: 100%;
 
 	/*width: 70%;
 	height: 100%;*/
-	width: 640px;
-	height: 360px;
+	width: 1000px;
+	height: 600px;
 	
 	float:left;
 	/*color: #FF0000;*/
@@ -28,14 +28,15 @@ width: 100%;
 }
 
 #settings {
-	width: 28%;
-	height: 100%;
+	/*width: 10%;*/
+	height: 600px;
+	/*height: 100%;*/
 	/*float:right;*/
 	overflow:auto;
 
 	color: #FF00FF;
 	border: 2px dashed black;
 	margin: 2px;
-	background-color: red;
+	background-color: #808080;
 }
 
