--- a/webGL2/style.css
+++ b/webGL2/style.css
@@ -30,10 +30,26 @@ width: 100%;
 	/*height: 100%;*/
 	/*float:right;*/
 	overflow:auto;
-
+	text-align: center;
 	color: #FF00FF;
 	border: 2px dashed black;
 	margin: 2px;
 	background-color: #808080;
 }
-
+#button {
+    background-color: #cc234c;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius:6px;
+    color: #fff;
+    font-family: 'Oswald';
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+}
+#button:hover {
+    border: none;
+    background:red;
+    box-shadow: 0px 0px 1px #777;
+}
