--- a/webGL2/style.css
+++ b/webGL2/style.css
@@ -12,13 +12,13 @@ width: 100%;
 
 #container {
 
-	/*width: 70%;
-	height: 100%;*/
-	width: 1000px;
-	height: 600px;
+	width: 85%;
+	height: 100%;
+	/*width: 100px;
+	height: 60px; */
 	
 	float:left;
-	/*color: #FF0000;*/
+	background-color: #FF0000;
 	border: 2px dotted black;
 	margin: 3px;
 
@@ -26,7 +26,7 @@ width: 100%;
 
 #settings {
 	/*width: 10%;*/
-	height: 600px;
+	height: 100%;
 	/*height: 100%;*/
 	/*float:right;*/
 	overflow:auto;
