Intervall for input, added mass, format for settings

--- a/webGL2/style.css
+++ b/webGL2/style.css
@@ -23,6 +23,11 @@ width: 100%;
 	float:left;
 }
 
+input[type="number"] {
+    width: 50px;
+    text-align: center;
+}
+
 #settings {
 	/*width: 10%;*/
 	height: 100%;
