--- a/webGL2/style.css
+++ b/webGL2/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 #wrapper {
-margin: 0.1;
+margin: 0.1px;
 width: 100%;
 }
 
@@ -25,20 +25,16 @@ input[type="number"] {
 	margin: 1px;
 }
 #ballsettings{
-	height: min;
 	overflow:auto;
 	text-align: center;
 	margin: 1px;
 }
 #windsettings{
-	height: min;
 	overflow:auto;
 	text-align: center;
 	margin: 1px;
 }
 #groundsettings{
-	height: min;
-
 	overflow:auto;
 	text-align: center;
 	margin: 1px;
@@ -56,6 +52,23 @@ input[type="number"] {
     border:none;
 }
 #button:hover {
+    border: none;
+    background:red;
+    box-shadow: 0px 0px 1px #777;
+}
+#buttontwo {
+    background-color: #cc234c;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius:6px;
+    color: #fff;
+    font-family: 'Oswald';
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+}
+#buttontwo:hover {
     border: none;
     background:red;
     box-shadow: 0px 0px 1px #777;
